# SdrPractice

./: myfile.txt
pyhon_qpsk/: 1.py  build_graph.py
sdrLessons/: CMakeLists.txt
sdrLessons/docs/: iio_info.txt
sdrLessons/tests/: rxtx_1_example.cpp
sdrLessons/tests/scripts/: plot_data.py
sdrLessons/tests/soapy_pluto/: myfile.h
sdrLessons/tests/tun_test/: CMakeLists.txt  tun_test.c
task 7-16/: myfile.h
task 7-16/pyhon_qpsk/: 1.py  build_graph.py
task 7-16/sdrLessons/: CMakeLists.txt  myfile.h
task 7-16/sdrLessons/src/: main  main.cpp  main1.cpp  main_with_p  main_with_p.cpp  rx_data.txt  rx_signal.txt
task 7-16/sdrLessons/tests/: CMakeLists.txt  chat_test.cpp  rxtx_2_example.cpp  single_adalm_rxtx_costas.cpp
task 7-16/sdrLessons/tests/scripts/: plot_data.py  plot_pcm.py  plot_pcm1.py  plot_pcm2.py
task 7-16/sdrLessons/tests/soapy_pluto/: soapy_pluto_sdr_timestamp.c
task1/: lab1.py  main.py  test.ipynb  test.py
task2/: main1.py  main2.py  main3.py
task3/: main.py
task4/: main.py
